<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/register"
    android:layout_margin="10dp"
    android:gravity="center"
    >


    <View
        android:layout_marginTop="10dp"
        android:id="@+id/title_divider_top"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <View
        android:id="@+id/title_divider_bottom"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/title_divider_top"
        android:layout_marginTop="2dp"
        android:background="#ffffff" />



    <TextView
        android:id="@+id/title_text"
        android:layout_marginTop="30dp"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Create Your Account"
        android:textColor="@color/white"
        android:textSize="17dp"
        android:textStyle="bold" />



    <!-- Name Field -->
    <EditText
        android:id="@+id/name"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="60dp"
        android:background="@color/white"
        android:hint="@string/hint_name"
        android:maxLength="25"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <!-- Email Field -->
    <EditText
        android:id="@+id/email"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/name"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/hint_email"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <!-- Username Field -->
    <EditText
        android:id="@+id/username"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/email"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/hint_username"
        android:maxLength="25"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <!-- Password Field -->
    <EditText
        android:id="@+id/password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/username"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/hint_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <!-- Confirm Password Field -->
    <EditText
        android:id="@+id/confirm_password"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_below="@id/password"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:background="@color/white"
        android:hint="@string/hint_confirm_password"
        android:inputType="textPassword"
        android:maxLength="15"
        android:singleLine="true"
        android:textColor="@color/black"
        android:textSize="15dp" />

    <!-- Buttons -->

    <Button
        android:id="@+id/clear_button"
        android:layout_width="90dp"
        android:layout_height="50dp"
        android:layout_below="@id/confirm_password"
        android:layout_marginLeft="95dp"
        android:layout_marginTop="1dp"
        android:text="Clear Form"
        android:textColor="@color/register"
        android:textSize="10dp" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="95dp"
        android:layout_height="50dp"
        android:layout_below="@id/confirm_password"
        android:layout_marginLeft="2dp"
        android:layout_toRightOf="@id/clear_button"
        android:text="Create Account"
        android:textColor="@color/register"
        android:textSize="10dp" />



    <View
        android:layout_marginTop="400dp"
        android:id="@+id/title_divider_down"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff" />

    <View
        android:id="@+id/title_divider_down2"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_below="@id/title_divider_top"
        android:layout_marginTop="400dp"
        android:background="#ffffff" />


</RelativeLayout>
