<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"

    android:background="@color/register"
    >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="100dp"

        >
        <View
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>
        <View
            android:layout_marginTop="2dp"
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:background="#ffffff"/>

        <TextView
            android:fontFamily="sans-serif-medium"
            android:layout_marginTop="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            android:text="Create Your Account"
            android:textColor="@color/white"
            android:textSize="20dp"
            android:textStyle="bold"


            ></TextView>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        >

<!--        enter name-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"

            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Name : "
                android:textColor="@color/white"
                android:layout_marginLeft="93dp"
                android:fontFamily="sans-serif-medium"

                ></TextView>

            <EditText
                android:id="@+id/name"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:hint="@string/hint_name"
                android:background="@drawable/edit_text_border"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="13dp"
                android:maxLength="20"
                android:textColorHint="@color/hint"


                ></EditText>


        </LinearLayout>

        <!--    email id-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Email Id * : "
                android:textColor="@color/white"
                android:layout_marginLeft="69dp"
                android:fontFamily="sans-serif-medium"
                ></TextView>

            <EditText
                android:id="@+id/email"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:hint="@string/hint_email"
                android:background="@drawable/edit_text_border"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="13dp"
                android:textColorHint="@color/hint"
                android:maxLength="30"
                ></EditText>


        </LinearLayout>

        <!--    enter username-->

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Username * : "
                android:textColor="@color/white"
                android:layout_marginLeft="55dp"
                android:fontFamily="sans-serif-medium"
                ></TextView>

            <EditText

                android:id="@+id/username"
                android:maxLength="18"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:hint="@string/hint_username"
                android:textColorHint="@color/hint"
                android:background="@drawable/edit_text_border"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="13dp"

                ></EditText>


        </LinearLayout>

        <!--    enter password-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Password * : "
                android:textColor="@color/white"
                android:textColorHint="@color/black"
                android:layout_marginLeft="55dp"
                android:fontFamily="sans-serif-medium"
                ></TextView>

            <EditText
                android:id="@+id/password"
                android:inputType="textPassword"
                android:maxLength="15"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:hint="@string/hint_password"
                android:background="@drawable/edit_text_border"
                android:textColorHint="@color/hint"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="13dp"
                ></EditText>

        </LinearLayout>


        <!--    enter confirm password-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="10dp"
            >
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Enter Confirm Password * : "
                android:textColor="@color/white"
                android:fontFamily="sans-serif-medium"
                ></TextView>

            <EditText
                android:id="@+id/confirm_password"
                android:maxLength="15"
                android:inputType="textPassword"
                android:layout_width="200dp"
                android:layout_height="25dp"
                android:hint="@string/hint_confirm_password"
                android:background="@drawable/edit_text_border"
                android:textColorHint="@color/hint"
                android:textColor="@color/black"
                android:singleLine="true"
                android:textSize="13dp"
                ></EditText>


        </LinearLayout>

<!--        buttons-->
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginLeft="35dp"

            >

            <Button
                android:id="@+id/clear_button"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:textSize="12dp"
                android:text="Clear Form"
                android:textColor="@color/register"
                android:fontFamily="sans-serif-medium"
            >
            </Button>

            <Button
                android:id="@+id/create_account_button"
                android:fontFamily="sans-serif-medium"
                android:layout_width="wrap_content"
                android:layout_height="50dp"
                android:text="Create Account"
                android:textSize="12dp"
                android:textColor="@color/register"
                android:layout_marginLeft="5dp"

                >
            </Button>


        </LinearLayout>


    </LinearLayout>



    <View
        android:layout_marginTop="50dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff"/>

    <View
        android:layout_marginTop="2dp"
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:background="#ffffff"/>




</LinearLayout>

